crates/tokio-actor/tests/ui/topology/non_actor_field.rs
use tokio_actor::Topology;

#[derive(Clone)]
struct NotActor;

#[derive(Topology)]
struct BadTopology {
    worker: NotActor,
}

fn main() {}
